<resources>
    <string name="appName">FilmBilet</string>
    <string name="loginBtn"><b>Zaloguj się</b></string>
    <string name="logoutBtn"><b>Wyloguj się</b></string>
    <string name="registerBtn"><b>Zarejestruj się</b></string>
    <string name="loginSuccessString">"Witaj "</string>
    <string name="registerSuccessToast">Zostałeś pomyślnie zarejestrowany. Możesz się teraz zalogować</string>
    <string name="hintName">Imię</string>
    <string name="hintSurname">Nazwisko</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Hasło</string>
    <string name="firstSector">\n10 zł</string>
    <string name="secondSector">\n15 zł</string>
    <string name="thirdSector">\n20 zł</string>
    <string name="fourthSector">\n30 zł</string>
    <string name="movieLength">"długość filmu: "</string>
    <string name="separator">|</string>
    <string name="genres">"gatunki: "</string>
    <string name="minAge">od lat:</string>
    <string name="connectionError">Nie można nawiązać połączenia</string>
    <string name="titleActivityReservations">ReservationsActivity</string>
    <string name="sector3Text">sektor 3</string>
    <string name="sector2Text">sektor 2</string>
    <string name="sector1Text">sektor 1</string>
    <string name="sector4Text">sektor 4</string>
    <string name="sector5Text">sektor 5</string>
    <string name="sector6Text">sektor 6</string>
    <string name="sector7Text">sektor 7</string>
    <string name="sector8Text">sektor 8</string>
    <string name="upperSector3Text">Sektor 3</string>
    <string name="upperSector2Text">Sektor 2</string>
    <string name="upperSector1Text">Sektor 1</string>
    <string name="upperSector4Text">Sektor 4</string>
    <string name="upperSector5Text">Sektor 5</string>
    <string name="upperSector6Text">Sektor 6</string>
    <string name="upperSector7Text">Sektor 7</string>
    <string name="upperSector8Text">Sektor 8</string>
    <string name="sector1Price">10 zł</string>
    <string name="sector2Price">15 zł</string>
    <string name="sector3Price">20 zł</string>
    <string name="sector4Price">30 zł</string>
    <string name="price">cena</string>
    <string name="btnReserveText">Zarezerwuj wybrane bilety</string>
    <string name="availablePlacesText">dostępnych</string>
    <string name="priceText">cena</string>
    <string name="titleActivityTestSector">testSectorActivity</string>
    <string name="firstColumnTextLeft">1</string>
    <string name="secondColumnTextLeft">2</string>
    <string name="thirdColumnTextLeft">3</string>
    <string name="fourthColumnTextLeft">4</string>
    <string name="fifthColumnTextLeft">5</string>
    <string name="sixthColumnTextLeft">6</string>
    <string name="seventhColumnTextLeft">7</string>
    <string name="firstColumnTextRight">8</string>
    <string name="secondColumnTextRight">9</string>
    <string name="thirdColumnTextRight">10</string>
    <string name="fourthColumnTextRight">11</string>
    <string name="fifthColumnTextRight">12</string>
    <string name="sixthColumnTextRight">13</string>
    <string name="seventhColumnTextRight">14</string>
    <string name="freeSeats">13</string>
    <string name="approveBtnText">Zatwierdź</string>
    <string name="cancelBtnText">Anuluj</string>
    <string name="movieTitleText">Tytuł</string>
    <string name="logoText">Logo Firmy</string>
    <string name="customerReservationsText">Moje rezerwacje</string>
    <string name="currencyAndSeatsText">zł. Miejsca:</string>
    <string name="reservationDateText">Data rezerwacji</string>
    <string name="repertoireDateText">Data seansu</string>
    <string name="myReservationsText">Moje rezerwacje</string>
    <string name="pdfText">PDF</string>
    <string name="home">HOME</string>
    <string name="priceText20">Cena za miejsce: </string>
    <string name="sector1Subtitle">Cena za miejsce: 10 zł</string>
    <string name="sector2Subtitle">Cena za miejsce: 15 zł</string>
    <string name="sector3Subtitle">Cena za miejsce: 20 zł</string>
    <string name="sector4Subtitle">Cena za miejsce: 30 zł</string>
    <string name="row1">I</string>
    <string name="row2">II</string>
    <string name="row3">III</string>
    <string name="row4">IV</string>
    <string name="row5">V</string>
    <string name="row6">VI</string>
    <string name="row7">VII</string>
    <string name="row8">VIII</string>
    <string name="row9">IX</string>
    <string name="row10">X</string>
    <string name="row11">XI</string>
    <string name="row12">XII</string>
    <string name="row13">XIII</string>
    <string name="row14">XIV</string>
    <string name="row15">XV</string>
    <string name="row16">XVI</string>
    <string name="row17">XVII</string>
    <string name="row18">XVIII</string>
    <string name="row19">XIX</string>
    <string name="row20">XX</string>
    <string name="reserved">-Zarezerwowane</string>
    <string name="available">-Dostępne</string>
    <string name="noReservations">Brak rezerwacji</string>
    <string name="choosedPlaceTitle">Zajęcie miejsca</string>
    <string name="choosedPlaceMsg">Inny użytkownik przed chwilą zajął wybrane przez ciebie miejsce o numerze:\u0020</string>
    <string name="choosedPlacesTitle">Zajęcie miejsc</string>
    <string name="choosedPlacesMsg">Inny użytkownik przed chwilą zajął wybrane przez ciebie miejsca o numerach:\u0020</string>
    <string name="emptySectorTitle">Brak miejsc w sektorze</string>
    <string name="emptySectorMsg">Niestety, wszystkie miejsca w tym sektorze są zajęte. Spróbuj znaleźć miejsce w innym sektorze.</string>
    <string name="noChoosedPlacesTitle">Brak wybranych miejsc</string>
    <string name="noChoosedPlacesMsg">Nie wybrałeś żadnego miejsca</string>
    <string name="choosedTakenPlaceTitle">Wybranie zajętego miejsca</string>
    <string name="choosedTakenPlaceMsg">Wybrałeś zajęte miejsce</string>
    <string name="serverErrorTitle">Błąd serwera</string>
    <string name="serverErrorMsg">Podczas wysyłania informacji o wybranych miejscach wykryto błąd</string>
    <string name="noChoosedHourTitle">Brak wybranej godziny</string>
    <string name="wrongChoosedHourTitle">Wybrałeś więcej niż jedną godzinę</string>
    <string name="wrongNumOfHours">Wybierz jedną interesującą ciebie godzinę</string>
    <string name="getResLog">Get reservations request: </string>
    <string name="resArrayName">reservation</string>
    <string name="resErrorLog">Reservation error: </string>
    <string name="resJsonLog">reservationJsonLOG </string>
    <string name="movie">movie</string>
    <string name="scheduleId">scheduleId</string>
    <string name="error">error</string>
    <string name="message">message</string>
    <string name="noResForRep">Nie ma rezerwacji dla podanego repertuaru. Spróbuj ponownie.</string>
    <string name="jsonError">Json error: </string>
    <string name="getMovieRep">Get movie repertoire request: </string>
    <string name="repertoire">repertoire</string>
    <string name="schedJsonLog">SchedulesJsonLOG </string>
    <string name="date">date</string>
    <string name="getMovieRepError">Get repertoire Error: </string>
    <string name="movieId">movieId</string>
    <string name="saveResRequest">Save reservation request: </string>
    <string name="saveResErrorLog">Save reservation error: </string>
    <string name="id">id</string>
    <string name="resSeatNumber">seatNumber</string>
    <string name="resRow">row</string>
    <string name="repertoireId">repertoireId</string>
    <string name="customerId">customerId</string>
    <string name="registerRequestAdd">req_register</string>
    <string name="loginRequestAdd">req_login</string>
    <string name="getReservationsRequestAdd">req_get_reservations</string>
    <string name="socketFailure">onFailure: </string>
    <string name="socketCloseReason">Zarezerwowowano miejsca</string>
    <string name="socketSendError">sendMessageToServer: client rowny null</string>
    <string name="opensSansRegular">opensans_regular.ttf</string>
    <string name="opensSansItalic">opensans_italic.ttf</string>
    <string name="opensSansBold">opensans_bold.ttf</string>
    <string name="dot">.</string>
    <string name="currency"> \u0020zł</string>
    <string name="colon">:</string>
    <string name="zero">0</string>
    <string name="jsonSeatNumbers">seatNumbers</string>
    <string name="jsonReservDate">reservDate</string>
    <string name="jsonMovieTitle">movieTitle</string>
    <string name="jsonRepertDate">repertDate</string>
    <string name="jsonRepertId">repertId</string>
    <string name="jsonPrice">price</string>
    <string name="jsonCustomerName">name</string>
    <string name="jsonCustomerSurname">surname</string>
    <string name="jsonCustomerEmail">email</string>
    <string name="jsonCustomerId">id</string>
    <string name="jsonMovieFromRepertoireId">id</string>
    <string name="jsonMovieFromRepertoireTitle">title</string>
    <string name="jsonMovieFromRepertoireRunningTimeMin">runningTimeMin</string>
    <string name="jsonMovieFromRepertoireAge">age</string>
    <string name="jsonMovieFromRepertoirePictureUrl">pictureUrl</string>
    <string name="jsonMovieFromRepertoireGenres">genres</string>
    <string name="networkConnectionErrorTitle">Błąd połączenia internetowego</string>
    <string name="serverErrorCheckLater">Spróbuj ponownie później</string>
    <string name="checkConnectionErrorStatement">Sprawdź połączenie internetowe i spróbuj ponownie</string>
    <string name="reservationPutReqParam">customerId</string>
    <string name="loginPutReqEmailParam">email</string>
    <string name="loginPutReqPasswordParam">password</string>
    <string name="registerPutReqNameParam">name</string>
    <string name="registerPutReqSurnameParam">surname</string>
    <string name="registerPutReqEmailParam">email</string>
    <string name="registerPutReqPasswordParam">password</string>
    <string name="customerReservationsJsonName">customerReservations</string>
    <string name="customerJsonName">customer</string>
    <string name="moviesFromRepertoireJsonName">moviesFromRepertoire</string>
    <string name="insertEmailAndPasswordPrompt">Proszę wprowadzić E-mail i hasło </string>
    <string name="loginNetworkConnectionErrorMsg">Żeby móc się zalogować, potrzebujesz dostępu do internetu</string>
    <string name="RegisterNetworkConnectionErrorMsg">Żeby móc się zarejestrować, potrzebujesz dostępu do internetu</string>
    <string name="sqLiteCustomerTable">customer</string>
    <string name="sqLiteDatabaseName">filmBiletDB</string>
    <string name="sqLiteCustomerEmail">email</string>
    <string name="notValidEmailMsg">Wprowadzony email nie jest poprawny!</string>
    <string name="emptyRegisterFieldsMsg">Proszę uzupełnić wszystkie pola!</string>
    <string name="modificateFilesAccessDeniedMsg">zabroniony dostep do modyfikacji plików</string>
    <string name="pdfFileName">reservation_</string>
    <string name="pdfFileExtension">.pdf</string>
    <string name="pdfFileFolderName">moje_rezerwacje_filmbilet</string>
    <string name="opensansRegularPath">assets/opensans_regular.ttf</string>
    <string name="polish">pl</string>
    <string name="poland">PL</string>
    <string name="timeSeparator">.</string>
    <string name="dateTimeSeparator">_</string>
    <string name="movieIntentExtraContentName">movie</string>
    <string name="dialogPositiveBtnText">OK</string>
    <string name="sessionManagerCustomerLogin">customerLogin</string>
    <string name="generatePdfInfo">Plik Pdf został wygenerowany w folderze /download</string>
    <string name="generatePdfError">Błąd tworzenia pliku pdf</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="chooseDateTime">Wybierz datę i godzinę</string>
    <string name="chooseSeatsText"><![CDATA[WYBÓR MIEJSCA >]]></string>
    <string name="numberOfChoosedPlaces">Wybranych miejsc:</string>
    <string name="choosedPlaces0">0</string>
    <string name="costText"> | Koszt:</string>
</resources>