<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logoText"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/hintEmail"
        android:background="@color/white"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/hintPassword"
        android:background="@color/white"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@null"
        android:minHeight="30dip"
        android:padding="10dp"
        android:text="@string/registerBtn"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_dark"
        android:minHeight="40dip"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/loginBtn"
        android:textColor="#f9f9f9"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>