<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logoText" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:autofillHints="@string/hintEmail" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:padding="10dp"
                    android:autofillHints="@string/hintName" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hintSurname"
                    android:inputType="text"
                    android:padding="10dp"
                    android:autofillHints="@string/hintSurname" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:autofillHints="@string/hintPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rounded_button_dark"
                    android:minHeight="40dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/registerBtn"
                    android:textColor="#f9f9f9" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:minHeight="30dip"
                    android:padding="10dp"
                    android:text="@string/loginBtn" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>