<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:foreground="@drawable/shape_window_dim">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:visibility="visible">

        <android.support.constraint.Guideline
            android:id="@+id/halfScreen-line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/selectSectorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_bold"
            android:text="Wybierz sektor"
            android:textSize="@dimen/header"
            app:layout_constraintBottom_toTopOf="@+id/title-screen-line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/title-screen-line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <ImageButton
            android:id="@+id/screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/ic_ekran4"
            app:layout_constraintBottom_toTopOf="@+id/screen-seats-line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title-screen-line" />

        <android.support.constraint.Guideline
            android:id="@+id/screen-seats-line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector1Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toStartOf="@+id/halfScreen-line"
            app:layout_constraintHorizontal_bias="0.653"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/screen-seats-line" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector2Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/halfScreen-line"
            app:layout_constraintTop_toTopOf="@+id/screen-seats-line" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector3Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toStartOf="@+id/halfScreen-line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector4Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/halfScreen-line"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector5Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toStartOf="@+id/halfScreen-line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector6Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/halfScreen-line"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector7Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/halfScreen-line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/sector8Text"
            android:src="@drawable/ic_sektor3"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/halfScreen-line"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            app:layout_constraintVertical_weight="10" />

        <!--<TextView-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:fontFamily="@font/opensans_bold"-->
            <!--android:text="Podsumowanie:"-->
            <!--android:textSize="@dimen/summary"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--tools:layout_editor_absoluteY="322dp" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginBottom="160dp"-->
            <!--android:text="TextView"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.861"-->
            <!--app:layout_constraintStart_toStartOf="parent" />-->

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#eaeaea"
            android:minHeight="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnReserve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintVertical_bias="0.0">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/opensans_bold"
            android:text="08.01.2018, 13:30 -- wybranych biletow: 3"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/btnReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_button_light"
            android:fontFamily="@font/opensans_bold"
            android:minHeight="40dip"
            android:text="@string/btnReserveText"
            android:textColor="#f9f9f9"
            android:textSize="@dimen/summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>